refocus of ch 4 intro

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -35,15 +35,17 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
-Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. To achieve this aim, this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
+Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters.
+
+This chapter contains a highly granular level of detail which is both helps situate the findings of the next chapter and is important, along with resources highlighted in this chapter footnotes, to allow the design by other practitioners and researchers in this area. The motivation here is that the processes of this research should be understandable and replicable by other practioners and researchers. I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4].
+
+I orginally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases. Instead, in line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
+
+Firstly, I describe activity systems at different scopes, focusing on the objective of participants.
+
+Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three conflicts in interrelated activity systems.
 
 This chapter discussion begins with an exploration of the tools used through the lens of authenticity. It continues by covering the mutual nature of the evolution of the design, and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
-
-### Why is this chapter structured in this way
-
-This chapter contains a highly granular level of detail which is both helps situate the findings of the next chapter and is important, along with resources highlighted in this chapter footnotes, to allow the design by other practitioners and researchers in this area. I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4].  
-
-I orginally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases. Instead in line with key techniques of third generation activity theory (3GAT), I explore emerging tensions in design in a way which communicates relevant context through the analysis of three conflicts in interrelated activity systems.
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
