working on methdology and design

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -920,7 +920,7 @@ An additional rationale for this process was to help reduce potential internal b
 
 ## Chapter Discussion
 
-
+NOTE - MOVED A SECTION ON THE EMERGENT DESIGN TO METHODOLOGY
 
 <!-- As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants. -->
 
