adding back in on tensions

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -287,7 +287,20 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns design-based / formative research in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail responses to key contradictions in the tool set of the early design which stimulate the development of authoring tools and supporting documentation.
+
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress.
+
+The term conflict here is used to describe a more serious break down of activity due to an accumulation of contradictions and tensions.
+
+The processes here aligns with AT approach of formative interventions in that the surfacing of tensions due to changes in the learning design over time are examined. I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
+
+These tensions are outlined from a cultural perspective, the first tension address issues of identity and interventions designed to mitigate cultural barriers of participation.
+
+The second conflict addresses contradictions in the tool set of the early design.
+
+The third conflict examines contradictions which stimulated the development of authoring tools and supporting documentation.
+
+
 
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
