--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -10,7 +10,7 @@ title: 4. Exploration of the Formative Learning Design Process
 ---
 # Exploration of the Formative Learning Design Process
 
-## Research Questions - Feb 2023
+## Research Questions - Feb 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
 2. How can learners build agency in an evolving community of game makers?
@@ -39,13 +39,21 @@ Due to the novel nature of the learning design, a detailed outline of the specif
 
 This chapter contains a highly granular level of detail which is both helps situate the findings of the next chapter and is important, along with resources highlighted in this chapter footnotes, to allow the design by other practitioners and researchers in this area. The motivation here is that the processes of this research should be understandable and replicable by other practioners and researchers. I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4].
 
-I orginally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases. Instead, in line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
+---
+NOTE
+---
+
+I originally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases.
+
+---
+
+In line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
 
 Firstly, I describe activity systems at different scopes, focusing on the objective of participants.
 
 Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three conflicts in interrelated activity systems.
 
-This chapter discussion begins with an exploration of the tools used through the lens of authenticity. It continues by covering the mutual nature of the evolution of the design, and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
+This chapter discussion begins with an exploration of the tools used through the lens of authenticity and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
@@ -120,7 +128,7 @@ There is a tension where he is hesitant about where to place code.
 Screen shot of the menu of choices. -->
 
 
-## Vignette illustrating shifts in scope of activity
+## Vignette illustrating an example of game making activity
 
 <!--
 #### Code Playgrounds
@@ -130,9 +138,8 @@ However in its styling it is playful and editorial picks and write up celebrate 
 #### Online graphics editors - Piskel -->
 
 
-### Vignette 4.1 - An example of game making activity
 
-The following vignette, consisting of extracts of participant activity over twenty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
+The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over twenty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
 
 <!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
 
