integrating cathy's notes

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -16,6 +16,9 @@ title: 4. Exploration of the Formative Learning Design Process
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
+## A note on style
+
+This chapter contains a large number of headings in draft form. These will be replaced with introductory sentences when structure is stable.
 
 
 <!-- ## Notes on structure -->
@@ -36,6 +39,7 @@ Moved impact of software tools here - and overall on templated approach on a mic
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
 Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters.
+<!-- NOTE  - CHAPTERS ON WHAT? -->
 
 This chapter contains a highly granular level of detail which is both helps situate the findings of the next chapter and is important, along with resources highlighted in this chapter footnotes, to allow the design by other practitioners and researchers in this area. The motivation here is that the processes of this research should be understandable and replicable by other practioners and researchers. I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4].
 
@@ -148,7 +152,9 @@ https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/
 
 ### Description of levels of activity illustrated using the vignette
 
-The following sections outline different scopes of activity, at times using detail from the vignette above, to further describe the overall process and to introduce tensions between system elements which are explored in this chapter. I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals.
+In line with the process outlined in chapter 3, the following sections outline different scopes of activity, at times using detail from the vignette above, to describe the activity of participants and to introduce tensions between system elements which are explored in this chapter.
+
+<!-- I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals. -->
 
 <!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
@@ -162,7 +168,11 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 #### Environmental factors and objectives
 
-As explored in the literature review, there are several wider objectives of the type creative design activity involved in this research. Aligning with my experiences, I have selected several important streams and represented them in an illustration 4.x  below. These include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; participating with other home educators in a creative environment and thus building team and communication skills; and finally a broad aim of fun on the part of the children participants.
+In line with socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. I have selected several relevant systems and represented them in an illustration 4.x  below.
+
+<!-- These include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; participating with other home educators in a creative environment and thus building team and communication skills; and finally a broad aim of fun on the part of the children participants. -->
+
+<!-- NOTE THERE IS A MISMATCH BETWEEN DIAGRAM AND THE OBJECTIVES - CHOOSE ONE - AND MAKE IT CLEAR -->
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v1.png){width=95%}
 
@@ -186,7 +196,10 @@ Table 4.x.  Tools used in larger-scoped objective involving the wider community 
 
 #### Larger objective - Making games for an audience
 
-The shared objective of one activity system is to make entertaining and educational games for an audience to play.
+
+Moving beyond wider activity systems, the overarching activity system of the game making programme that the participants signed up for has a shared objective of making entertaining and educational games for an audience to play.
+
+<!-- NOTE - what is the difference between objective and outcome -->
 
 <!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
 
